team_bio + about

--- a/hangman_webapp/templates/fancylayout.html
+++ b/hangman_webapp/templates/fancylayout.html
@@ -27,6 +27,7 @@
 	<div class="text-center">
         <a class="btn btn-primary" href="/about">About</a>
 				<a class="btn btn-primary" href="/start">New Game</a>
+        <a class="btn btn-primary" href="/team_bio">Team Bio</a>
 				  </div>
     <div class="container" id="content">
 		{% block content %}{% endblock %}
